--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="content">Konten</string>
     <string name="preview_thread">Tampilan Thread</string>
     <string name="cancel">Batalkan</string>
+    <string name="back">Kembali</string>
     <string name="send">Kirim</string>
     <string name="reply">Balas</string>
     <string name="reply_to">Balas ke:</string>
