--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="edit_thread">Sunting Thread</string>
     <string name="delete_thread">Hapus thread</string>
     <string name="hide_thread">Sembunyikan thread</string>
-    <string name="report_thread">Laporkan thread</string>
+    <string name="report_thread">Laporkan Thread</string>
     <string name="dont_show_thread">Jangan perlihatkan thread akun ini</string>
     <string name="new_thread">Thread Baru</string>
     <string name="parent">Judul</string>
