--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,7 @@
     <string name="menu_forum">Merchant Forum</string>
     <string name="menu_favorite">Favorite Thread</string>
     <string name="menu_loyalty">Merchant Loyalty</string>
+    <string name="menu_hidden">Hidden Threads</string>
 
     <string name="mid">mid : 2001558246</string>
     <string name="change_home_picture">Change Home Picture</string>
