--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="pref_location">location</string>
     <string name="pref_mid">id</string>
     <string name="pref_email">email</string>
-    <string name="pref_coin">coin</string>
+    <string name="pref_point">point</string>
     <string name="pref_background_picture">background_picture</string>
     <string name="pref_exp">exp</string>
     <string name="pref_position">position</string>
@@ -90,6 +90,8 @@
     <string name="pref_address">address</string>
     <string name="pref_owner">owner</string>
     <string name="pref_description">description</string>
+    <string name="pref_loyalty_name"/>
+    <string name="pref_loyalty_id"/>
 
     <string name="menu_help">EDC Help and Support</string>
     <string name="menu_qr">QR Code</string>
@@ -144,4 +146,5 @@
     <string name="save_changes">Simpan Perubahan</string>
     <string name="discard_changes_content">Anda memiliki perubahan yang tidak tersimpan.\nApa anda ingin menyimpan perubahan tersebut?</string>
     <string name="cooperation_agreement">PERJANJIAN KERJASAMA</string>
+    <string name="point_history"><u>Point History ></u></string>
 </resources>
