--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,8 @@
     <string name="pref_description">description</string>
     <string name="pref_loyalty_name" />
     <string name="pref_loyalty_id" />
+    <string name="pref_position_name">position_name</string>
+    <string name="pref_position_id">position_id</string>
 
     <string name="menu_help">EDC Help and Support</string>
     <string name="menu_qr">QR Code</string>
