--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,5 +149,6 @@
     <string name="discard_changes_content">Anda memiliki perubahan yang tidak tersimpan.\nApa anda ingin menyimpan perubahan tersebut?</string>
     <string name="cooperation_agreement">PERJANJIAN KERJASAMA</string>
     <string name="point_history"><u>Point History ></u></string>
-    <string name="info_logo">Informasi:\n1. Gambar Logo harus HD (min: 512x512px).\n2. Masimal Gambar adalah 3.</string>
+    <string name="info_logo">Informasi:\n1. Gambar logo harus HD (min: 512x512px).\n2. Maksimal gambar adalah 3.</string>
+    <string name="info_product">Informasi:\n1. Gambar produk harus HD (min: 512x512px).\n2. Maksimal gambar adalah 3.</string>
 </resources>
