--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,7 @@
     <string name="pref_loyalty_id" />
     <string name="pref_position_name">position_name</string>
     <string name="pref_position_id">position_id</string>
+    <string name="pref_is_information_hide">false</string>
 
     <string name="menu_help">EDC Help and Support</string>
     <string name="menu_qr">QR Code</string>
