--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,4 +156,6 @@
     <string name="promo_request_success1">Pengajuan promo berhasil dikirim!</string>
     <string name="promo_request_success2">Tim kami akan segera memroses pengajuan Anda.</string>
     <string name="info_tnc">Terdapat dua pilihan dalam mengirimkan syarat dan ketentuan promo\nApabila Anda memilih Deskripsi S&amp;K Promo, Anda harus mendeskripsikan promo secara detail.\nApabila Anda memilih Tambah Attachment, Anda harus mengirimkan dokumen yang berisikan Syarat dan Ketentuan secara lengkap dan tipe file yang dikirim .doc atau .docx.</string>
+    <string name="info_no_internet">Jaringan Internet Anda Mati\nHubungkan Kembali dengan Internet</string>
+    <string name="i_understand">Saya Mengerti</string>
 </resources>
